Fix app card spacing when there are only a few apps in the app list.

--- a/py/compmatrix/client/assets/raw/scss/app.scss
+++ b/py/compmatrix/client/assets/raw/scss/app.scss
@@ -200,8 +200,6 @@ body {
                     }
 
                     div#apps-list {
-                        min-height: 500px;
-
                         overflow: auto;
 
                         display: flex;
